--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,14 @@ h1 {
   margin: 2px 0px 2px 0px;
 }
 
+.ReviewCard__FootNote {
+  margin-bottom: 0%;
+  margin-top: 0%;
+  font-size: 0.6em;
+  font-family: "Andale Mono", monospace;
+  margin-left: 1%;
+}
+
 .ReviewCard_Link {
   text-decoration: none;
   font-family: inherit;
