--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
 }
 
 .Home {
-  text-align: center;
-  background-color: #6cb4f8;
+  /* text-align: center; */
+  /* background-color: #6cb4f8; */
   border-radius: 10px;
   padding: 1%;
   margin-top: 1%;
@@ -19,20 +19,9 @@
   margin-right: 2%;
 }
 
-/* .Nav__SelectCategory {
-  margin-top: 6px;
-  margin-bottom: 11px;
-  font-size: 17px;
-  padding: 2px;
-  font-family: "Inconsolata", monospace;
-} */
-
 .ReviewCard {
   font-family: "Heebo", sans-serif;
   font-size: 1.25em;
-  /* background-color: #1511c0;
-  color: white;
-  border-radius: 10px; */
 }
 
 .ReviewCard__FootNote {
